--- a/hm.tex
+++ b/hm.tex
@@ -871,14 +871,13 @@ The book \cite{book:knauf} will be a good extra reference for the course. In add
         \item In the case of the spring, also called the \emph{harmonic oscillator}, $U(x) = \frac12 \omega^2 x^2$ and the integral curves are of the form $y^2 + \omega^2 x^2 = C$.
           Recalling \eqref{eq:springsol}, $C = \omega^2 R^2 \geq 0$ and the curves are ellipses parametrized by $C$.
           This will be a very important example throughout the course.
+          \warpHTMLonly{<div align=center><iframe height=490 width=800 src=https://editor.p5js.org/mseri/full/kU1aO7EoZ style=border:none;></iframe><p>Use the sliders to see how the phase plane is changing. What happens if you vary the mass?</p></div>}
         \item In the case of the pendulum, $U(x) = -\omega^2 \cos(x)$ and the integral curves are solutions of $\frac12 y^2 - \omega^2 \cos(x) = C$, $C \geq -\omega^2$.
           Even though we cannot easily give a time parametrization of the motion itself, this formalism allows us to immediately describe the evolution of the system.
           We will come back to this fact in more generality in the next section.
+          \warpHTMLonly{<div align=center><iframe height=515 width=800 src=https://editor.p5js.org/mseri/full/iar8GHKTU style=border:none;></iframe><p>Use the sliders to see how the phase plane is changing. What happens if you vary the mass?</p></div>}
       \end{itemize}
     \end{example}
-
-    \warpHTMLonly{<div align=center><iframe height=530 width=800 src=https://editor.p5js.org/mseri/full/iar8GHKTU></iframe></div>}
-    \warpHTMLonly{<div align=center><iframe height=530 width=800 src=https://editor.p5js.org/mseri/full/kU1aO7EoZ></iframe></div>}
 
     From these examples we already see that phase curves can consist of only one point. In such cases, the points are called \emph{equilibrium} points.
 
