Update until Lagrangian mechanics
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.bib
+++ b/hm.bib
@@ -322,3 +322,12 @@ Bibliography}
   zbl       = {1303.70020},
   url       = {https://www-e.ovgu.de/mertens/teaching/seminar/themen/ejp_integrability_chaos.pdf}
 }
+
+@incollection{elliptic,
+    author =  {{European Mathematical Society}},
+    title        = {{Elliptic Integral}},
+    booktitle    =  {{Encyclopedia of Mathematics}},
+    url = {http://encyclopediaofmath.org/index.php?title=Elliptic_integral&oldid=46813},
+    year         =  {2024},
+    publisher    =  {EMS Press}
+}
